--- a/BloggoFrontend/pages/forgot-password.html
+++ b/BloggoFrontend/pages/forgot-password.html
@@ -5,28 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background: #f8fafc;
-        }
-        .card {
-            border-radius: 16px;
-        }
-        .alert {
-            display: none;
-        }
-        .spinner-border-sm {
-            width: 1rem;
-            height: 1rem;
-            border-width: 0.15em;
-        }
-    </style>
+   <link rel="stylesheet" href="../css/signing.css">
 </head>
 <body >
-<form id="forgotForm">
-    <input type="email" id="email" placeholder="Enter your email" required />
-    <button type="submit">Send Reset Link</button>
-</form>
+<!-- Header -->
+<div class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+        <a class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</a>
+
+        <div>
+            <a href="signup.html" class="btn"><i class="fas fa-sign-in-alt me-1"></i>Sign up</a>
+            <a href="../index.html" class="btn" id="btn-home"><i class="fas fa-home me-1"></i>Home</a>
+        </div>
+    </div>
+</div>
+
+<!-- Main Split Screen Container -->
+<div class="main-container">
+    <!-- Left Side - Form -->
+    <div class="form-section">
+        <div class="auth-container">
+            <div class="auth-header">
+                <h1>Forgot Password</h1>
+                <p>Sign in to access your stories, bookmarks, and community.</p>
+            </div>
+                <form id="forgotForm">
+                    <div class="form-group mb-4">
+                        <input class="form-control" type="email" id="email" placeholder="Enter your email" required />
+                        <br>
+                        <button type="submit" class="btn btn-primary w-100">Send Reset Link</button>
+                    </div>
+                </form>
+            <div class="oauth-section">
+                <div class="divider">or</div>
+                <div class="d-flex gap-3" id="inline">
+                    <button class="oauth-circle-btn" id="google-auth">
+                        <img alt="Google" src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"/>
+                    </button>
+                    <button class="oauth-circle-btn" id="facebook-auth">
+                        <img alt="Facebook" src="https://www.svgrepo.com/show/475647/facebook-color.svg"/>
+                    </button>
+                    <button class="oauth-circle-btn" id="linkedin-auth">
+                        <img alt="LinkedIn" src="https://www.svgrepo.com/show/448234/linkedin.svg"/>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Right Side - Image -->
+    <div class="image-section">
+        <div class="image-content">
+            <h2>Join Our Community</h2>
+            <p>Connect with writers, discover amazing stories, and share your own creative journey with the world.</p>
+        </div>
+    </div>
+</div>
+
 
 <script>
     document.getElementById("forgotForm").addEventListener("submit", async (e) => {
