--- a/BloggoFrontend/pages/reset-password.html
+++ b/BloggoFrontend/pages/reset-password.html
@@ -1,41 +1,113 @@
+<!-- Bloggo-frontend/reset-password.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Reset Password</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 400px;
+            margin: 50px auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            background-color: #f9f9f9;
+        }
+        h2 {
+            text-align: center;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #FF6F61;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:disabled {
+            background-color: #ccc;
+        }
+        #message {
+            text-align: center;
+            margin-top: 15px;
+            font-weight: bold;
+        }
+        #message.success {
+            color: green;
+        }
+        #message.error {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-<form id="resetForm">
-    <input type="text" id="token" placeholder="Enter token from email" required />
-    <input type="password" id="newPassword" placeholder="New password" required />
-    <button type="submit">Reset Password</button>
-</form>
+<h2>Reset Your Password</h2>
+<input id="newPassword" type="password" placeholder="New password" />
+<input id="confirmPassword" type="password" placeholder="Confirm password" />
+<button id="resetBtn">Reset Password</button>
+<p id="message"></p>
 
 <script>
-    document.getElementById("resetForm").addEventListener("submit", async (e) => {
-        e.preventDefault();
+    const urlParams = new URLSearchParams(window.location.search);
+    const token = urlParams.get('token');
+    const btn = document.getElementById('resetBtn');
+    const message = document.getElementById('message');
 
-        const token = document.getElementById("token").value;
-        const newPassword = document.getElementById("newPassword").value;
+    if(!token) {
+        message.innerText = "Invalid reset link.";
+        message.className = "error";
+        btn.disabled = true;
+    }
+
+    btn.addEventListener('click', async () => {
+        const newPassword = document.getElementById('newPassword').value;
+        const confirmPassword = document.getElementById('confirmPassword').value;
+
+        if(newPassword !== confirmPassword){
+            message.innerText = "Passwords do not match.";
+            message.className = "error";
+            return;
+        }
+
+        btn.disabled = true;
+        btn.innerText = "Resetting...";
 
         try {
-            const response = await fetch("http://localhost:8080/auth/reset-password", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({ token, newPassword }),
-                credentials: "include"
+            const res = await fetch('http://localhost:8080/auth/reset-password', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ token, newPassword })
             });
 
-            const result = await response.text();
-            alert(result);
-        } catch (err) {
-            console.error(err);
-            alert("Something went wrong.");
+            const msg = await res.text();
+
+            if(res.ok){
+                message.innerText = msg;
+                message.className = "success";
+                setTimeout(() => window.location.href = 'login.html', 2500);
+            } else {
+                message.innerText = msg;
+                message.className = "error";
+                btn.disabled = false;
+                btn.innerText = "Reset Password";
+            }
+
+        } catch(err) {
+            message.innerText = "Error resetting password.";
+            message.className = "error";
+            btn.disabled = false;
+            btn.innerText = "Reset Password";
         }
     });
 </script>
-
 </body>
 </html>
