--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -104,7 +104,7 @@
                     Just a 21+ girl navigating life with passion and purpose! ✨
                 </p>
 
-                <!-- Wallet & Earnings Inline -->
+                <!--&lt;!&ndash; Wallet & Earnings Inline &ndash;&gt;
                 <div class="d-flex gap-3 mb-3">
                     <div class="wallet flex-fill p-3 bg-light rounded d-flex align-items-center justify-content-between">
                         <div>
@@ -119,7 +119,7 @@
                             <p class="fw-bold mb-0">LKR 1,200.00</p>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
                 <a href="settings.html" class="btn btn-secondary btn-sm w-100 mt-2" style="background: black; color: white">Edit profile</a>
 
