--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -174,7 +174,7 @@
                         <textarea id="editContent" class="form-control" rows="8" required></textarea>
                     </div>
                     <div class="text-end">
-                        <button type="submit" class="btn btn-success">💾 Save Changes</button>
+                        <button type="submit" class="btn">Save Changes</button>
                     </div>
                 </form>
             </div>
