--- a/BloggoFrontend/pages/blog-editor.html
+++ b/BloggoFrontend/pages/blog-editor.html
@@ -96,6 +96,10 @@
 
         <!-- Toolbar -->
         <div class="toolbar border-bottom p-3 bg-light d-flex flex-wrap gap-2 align-items-center" >
+            <button onclick="openUnsplashModal()" class="btn btn-sm btn-outline-secondary" title="Insert Unsplash Image">
+                <i class="fas fa-image"></i> Unsplash
+            </button>
+
             <button onclick="format('bold')" class="btn btn-sm btn-outline-secondary fw-bold" title="Bold">B</button>
             <button onclick="format('italic')" class="btn btn-sm btn-outline-secondary" title="Italic"><em>I</em></button>
             <button onclick="format('underline')" class="btn btn-sm btn-outline-secondary" title="Underline"><u>U</u></button>
@@ -145,6 +149,22 @@
         </div>
     </div>
 </main>
+
+<div class="modal fade" id="unsplashModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Search Unsplash</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <input type="text" id="unsplashSearch" class="form-control mb-3" placeholder="Search for images...">
+                <div id="unsplashResults" class="d-flex flex-wrap gap-2"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Bootstrap JS Bundle -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
