--- a/BloggoFrontend/pages/admin-action.html
+++ b/BloggoFrontend/pages/admin-action.html
@@ -80,7 +80,7 @@
                     <div class="card-header fw-bold">Broadcast Announcement</div>
                     <div class="card-body">
                         <textarea class="form-control mb-2" rows="3" placeholder="Write a message to all users..."></textarea>
-                        <button class="btn btn-primary"><i class="fas fa-paper-plane"></i> Send</button>
+                        <button id="btn-send" class="btn btn-primary"><i class="fas fa-paper-plane" ></i> Send</button>
                     </div>
                 </div>
             </div>
